Added version1, version2 to whitelist